Primer elemento div: Creacion de la tabla

--- a/ejercicio05/index.html
+++ b/ejercicio05/index.html
@@ -8,6 +8,12 @@
 		<h2>Ejercicio 02:</h2>
 		<p>Escribir una página que permita calcular las suma de todos los valores de una tabla de valores dinámica. La idea es crear una página web con un formulario que te permita decir cuantos valores tendrá la tabla, luego, al enviar el formulario la tabla se debe crear dinámicamente, junto con otro botón de envió para calcular la suma.</p>
 		<hr>
+		<div id="divCreateTable">
+			<h3>Creación de la tabla</h3>
+			<label>Tamaño de la tabla:</label>
+			<input type="number" id="tableSize" value=1>
+			<input type="button" onclick="createTable()" value="Crear tabla">
+		</div>
 	</body>
 </html>
 
