Segundo elemento div: Definicion de valores

--- a/ejercicio05/index.html
+++ b/ejercicio05/index.html
@@ -14,6 +14,13 @@
 			<input type="number" id="tableSize" value=1>
 			<input type="button" onclick="createTable()" value="Crear tabla">
 		</div>
+		<div id="divValuesTable" style="display: block">
+			<h3>Definicion de valores</h3>
+			<div id="valuesTable"> <!-- Aqui va la tabla -->
+			</div>
+			<input type="button" onclick="calcSum()" value="Calcular">
+		</div>
+		<hr>
 	</body>
 </html>
 
