Tercer elemento div: Resultado de la suma de valores

--- a/ejercicio05/index.html
+++ b/ejercicio05/index.html
@@ -20,6 +20,11 @@
 			</div>
 			<input type="button" onclick="calcSum()" value="Calcular">
 		</div>
+		<div id="divTotalSum" style="display: block">
+			<div id="gottenValues"></div>
+			<label>La suma total es: </label>
+			<label id="totalSum"></label>
+		</div>
 		<hr>
 	</body>
 </html>
