Los div de Definicion de valores y Suma de valores se ocultaron

--- a/ejercicio05/index.html
+++ b/ejercicio05/index.html
@@ -14,13 +14,13 @@
 			<input type="number" id="tableSize" value=1>
 			<input type="button" onclick="createTable()" value="Crear tabla">
 		</div>
-		<div id="divValuesTable" style="display: block">
+		<div id="divValuesTable" style="display: none">
 			<h3>Definicion de valores</h3>
 			<div id="valuesTable"> <!-- Aqui va la tabla -->
 			</div>
 			<input type="button" onclick="calcSum()" value="Calcular">
 		</div>
-		<div id="divTotalSum" style="display: block">
+		<div id="divTotalSum" style="display: none">
 			<div id="gottenValues"></div>
 			<label>La suma total es: </label>
 			<label id="totalSum"></label>
