Agregado script ejercicio05.js y referenciado en index.html

--- a/ejercicio05/index.html
+++ b/ejercicio05/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
-		<title></title>
+		<title>Ejercicio 05</title>
 		<meta charset="UTF-8">
+		<script src="./ejercicio05.js"></script>
 	</head>
 	<body>
 		<h2>Ejercicio 02:</h2>
