Le di mas de diseño y le agrege el boton el cual usara la funcion ingresar() para obtener el codigo

--- a/Ejercicio4/index.html
+++ b/Ejercicio4/index.html
@@ -6,11 +6,16 @@
     <script src='ejercicio4.js'></script>
 </head>
 <body>
+    <br>
     <div id="Ingreso">
         <label>
-
+            Link del meet:
         </label>
         <input id="link" type="text">
+    </div>
+    <br><br><hr>
+    <div id="Codigo">
+
     </div>
 </body>
 </html>
