Hice una parte de la funcion ingresar, donde esta verificara que el link introducido sea valido

--- a/Ejercicio4/index.html
+++ b/Ejercicio4/index.html
@@ -12,6 +12,7 @@
             Link del meet:
         </label>
         <input id="link" type="text">
+        <br><button onclick="ingresar()">Codigo sin guiones</button>
     </div>
     <br><br><hr>
     <div id="Codigo">
