Cree un codigo css para que se vea mejor, tambien cree clases y añadi un div

--- a/Ejercicio4/index.html
+++ b/Ejercicio4/index.html
@@ -4,15 +4,18 @@
     <meta charset="utf-8">
     <title>Ejercicio 4</title>
     <script src='ejercicio4.js'></script>
+    <link rel='stylesheet' href='myStyle.css'>
 </head>
 <body>
     <br>
-    <div id="Ingreso">
-        <label>
-            Link del meet:
-        </label>
-        <input id="link" type="text">
-        <br><button onclick="ingresar()">Codigo sin guiones</button>
+    <div class="Ingreso">
+        <div class="link">
+            <label>
+               Link del meet:
+            </label>
+            <input id="link" type="text">
+        </div>
+        <br><button class="boton" onclick="ingresar()">Codigo sin guiones</button>
     </div>
     <br><br><hr>
     <div id="Codigo">
