Cree el primer div para ingresar el texto

--- a/Ejercicio3/index.html
+++ b/Ejercicio3/index.html
@@ -6,7 +6,10 @@
 	</head>
 	<body>
 		<h2>Ejercicio 2:</h2>
-		<p> Escriba una página web que reciba un texto y al presionar un botón muestre el mismo texto invertido en otra sección (div). Por ejemplo si se escribe “Hola”, se mostraría como “aloH”.</p>
+		<p>Escriba una página web que reciba un texto y al presionar un botón muestre el mismo texto invertido en otra sección (div). Por ejemplo si se escribe “Hola”, se mostraría como “aloH”.</p>
 		<hr>
+		<div id="SaveText">
+			<label>Ingrese el Texto</label><br>
+		</div>
 	</body>
 </html>
