Añadi la entrada del texto y otro div para la salida

--- a/Ejercicio3/index.html
+++ b/Ejercicio3/index.html
@@ -10,6 +10,12 @@
 		<hr>
 		<div id="SaveText">
 			<label>Ingrese el Texto</label><br>
+			<textarea id="text" rows="5" cols="30"></textarea><br>
+			<input type="button" onclick="reverseText()" value="Enviar">
+		</div>
+		<br>
+		<div id="ReverseText">
+			
 		</div>
 	</body>
 </html>
