--- a/ejercicio01/fecha.html
+++ b/ejercicio01/fecha.html
@@ -4,17 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio1</title>
+    <style>
+        body {
+            text-align: center;
+            background-color: black;
+            color: azure;
+            font-family: 'Courier New', Courier, monospace;
+        }
+        p {
+            background-color: green;
+            border-radius: 20px;
+            font-size: xx-large;
+            padding: 20px;
+        }
+        div {
+            display: inline-block;
+            padding-top: 13%;
+        }
+    </style>
 </head>
 <body>
-    <h1>Fecha en JavaScript</h1>
-    <p id="demo"></p>
-
+    <h3>getDay() en JavaScript</h3>
+    <div>
+        <h1>Hoy es...</h1>
+        <p id="demo"></p>
+    </div>
+    
 <script>
-    const fecha = newDate();
-    /*
-    let dia = fecha.getDay();
+    let dia = new Date().getDay();
     let diaEscrito;
+    
     if (dia == 0){
         diaEscrito = "Domingo";
     } else if (dia == 1){
@@ -27,11 +47,11 @@
         diaEscrito = "Jueves";
     } else if (dia == 5) {
         diaEscrito = "Viernes";
-    } else if (dia == 6) {
+    } else {
         diaEscrito = "Sábado";
     }
-*/
-    document.getElementById("demo").innerHTML = fecha;
+    document.getElementById("demo").innerHTML = diaEscrito;
+    console.log(dia);
 </script>
 </body>
 </html>
