--- a/ejercicio03/ejer.html
+++ b/ejercicio03/ejer.html
@@ -14,6 +14,8 @@
             console.log(fechaActual);
             console.log();
             console.log(fechaActual.getDay);
+            console.log(fechaActual.getDate);
+            console.log(fechaActual.getHours);
         </script>
 
     </body>
