Pruebas con un dia en específico

--- a/ejercicio03/ejer.html
+++ b/ejercicio03/ejer.html
@@ -10,12 +10,10 @@
         <h1 id="demo"></h1>
 
         <script>
-            let fechaActual = new Date();
-            console.log(fechaActual);
-            console.log();
-            console.log(fechaActual.getDay);
-            console.log(fechaActual.getDate);
-            console.log(fechaActual.getHours);
+            let diaArequipa = new Date(2022,7,15);
+            console.log(diaArequipa.getDay);
+            console.log(diaArequipa.getDate);
+            console.log(diaArequipa.getHours);
         </script>
 
     </body>
