Calculo de la diferencia en términos numericos

--- a/ejercicio03/ejer.html
+++ b/ejercicio03/ejer.html
@@ -11,9 +11,9 @@
 
         <script>
             let fechaActual = new Date();
-            var fechaUtc2 = new Date(Date.UTC(96,1,2,3,4,5));
-            console.log(fechaUtc2.toUTCString());
-            //console.log(diaArequipa.getDate);
+            let diferencia = fechaActual / (1000 * 60 * 60 *24);
+
+            console.log(diferencia);
             //console.log(diaArequipa.getHours);
         </script>
 
