--- a/ejercicio03/ejer.html
+++ b/ejercicio03/ejer.html
@@ -10,11 +10,21 @@
         <h1 id="demo"></h1>
 
         <script>
+            function calcularDiferenciaDias(fecha1, fecha2){
+                //let fechaUtc1 = Date.UTC(fecha1.getFullYear(), fecha1.getMonth(), fecha2.getDate);
+                //let fechaUtc2 = Date.UTC(fecha2.getFullYear(), fecha2.getMonth(), fecha2.getDate);
+                let diferencia = (fecha1 - fecha2) / (1000 * 60 * 60 *24);
+                return Math.floor(diferencia);
+            }
             let fechaActual = new Date();
-            let diferencia = fechaActual / (1000 * 60 * 60 *24);
-
-            console.log(diferencia);
-            //console.log(diaArequipa.getHours);
+            console.log(fechaActual);
+            console.log();
+            let diaArequipa = new Date(2022,7,15);
+            console.log(diaArequipa);
+            console.log();
+            console.log(calcularDiferenciaDias(diaArequipa, fechaActual));
+            let respuesta = calcularDiferenciaDias(diaArequipa, fechaActual);
+            document.getElementById("demo").innerHTML = respuesta;
         </script>
 
     </body>
