--- a/ejercicio03/ejer.html
+++ b/ejercicio03/ejer.html
@@ -2,17 +2,18 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Fechas</title>
+        <title>Dia de Arequipa</title>
+        <link rel="stylesheet" href="estilo.css"/>
     </head>
     <body>
-        <h2>JavaScript Strings</h2>
         <h1>FALTAN: </h1>
-        <h1 id="demo"></h1>
-
+        <h2 id="demo"></h2>
+        <h2>de nuestra Arequipa</h2>
+        <div class="alinear">
+            <img src="arequipa.jpg">
+        </div>
         <script>
             function calcularDiferenciaDias(fecha1, fecha2){
-                //let fechaUtc1 = Date.UTC(fecha1.getFullYear(), fecha1.getMonth(), fecha2.getDate);
-                //let fechaUtc2 = Date.UTC(fecha2.getFullYear(), fecha2.getMonth(), fecha2.getDate);
                 let diferencia = (fecha1 - fecha2) / (1000 * 60 * 60 *24);
                 return Math.floor(diferencia);
             }
@@ -24,7 +25,7 @@
             console.log();
             console.log(calcularDiferenciaDias(diaArequipa, fechaActual));
             let respuesta = calcularDiferenciaDias(diaArequipa, fechaActual);
-            document.getElementById("demo").innerHTML = respuesta;
+            document.getElementById("demo").innerHTML = respuesta+" dias para el Aniversario";
         </script>
 
     </body>
