Referencie el css

--- a/Ejercicio3/index.html
+++ b/Ejercicio3/index.html
@@ -4,6 +4,7 @@
 		<title>Ejercicio02</title>
 		<meta charset="UTF-8">
 		<script src="./ejercicio02.js"></script>
+		<link rel="stylesheet" href="./myStyle.css">
 	</head>
 	<body>
 		<h2>Ejercicio 02:</h2>
